# iced-widgets

./: Cargo.toml
.github/workflows/: ci.yml
examples/: list_demo.rs
src/: lib.rs  list.rs
src/list/: tests.rs
tests/: list_widget_trait.rs
